PRO-1: added sorting for codelab progress by creation date from eldest to newest