@@ -5,17 +5,23 @@ import com.switchfully.evolveandgo.lmsbackend.student.dto.StudentCodelabProgress
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class StudentCodelabProgressMapper {
 
     public StudentCodelabProgressDto toDto(StudentCodelabProgress studentCodelabProgress) {
-        return new StudentCodelabProgressDto(studentCodelabProgress.getCodelab().getId(), studentCodelabProgress.getProgress(),studentCodelabProgress.getCodelab().getName());
+        return new StudentCodelabProgressDto(
+                studentCodelabProgress.getCodelab().getId(),
+                studentCodelabProgress.getProgress(),
+                studentCodelabProgress.getCodelab().getName(),
+                studentCodelabProgress.getCodelab().getCreationDate()
+        );
     }
 
     public List<StudentCodelabProgressDto> toDtoList(List<StudentCodelabProgress> studentCodelabProgressList) {
         return studentCodelabProgressList.stream()
                 .map(studentCodelabProgress -> toDto(studentCodelabProgress))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
